Version 1.1.1
==============

* Fix burning torch not working properly if there are more than 256 objects in a level.
* Fix train death animation.
* Fix knife thrower AI.
* Overhaul look mode:
 - Allow for consistent and wider viewing angles while crawling, crouching, and hanging.
 - Improve movement and control.
 - Re-enable looking while performing up jump, backward jump, or backward crawl.
 - Add functionality to rotate slowly when holding Walk while using binoculars or lasersight.
* Add crumbling platform and add new OCBs for behaviour:
 - OCB 0: Default behaviour. When the player steps on the platform, it will shake and crumble after 1.2 seconds.
 - OCB > 0 (crumble delay in frame time): When the player steps on the platform, it will shake and crumble after the number of frames set in the OCB.
 - A positive value results in activation via player collision.
 - A negative value requires a trigger to activate.

Lua API changes:
* Make Vec2 object float-based instead of integer-based.
* Add Vec2 arithmetic for division with a number and multiplication with another Vec2.

Version 1.1.0
==============

* Fix enemies shooting Lara through static meshes and moveables.
* Fix skeletons and mummies not being affected by explosive weapons.
* Fix crash on loading if static meshes with IDs above maximum are present.
* Fix various crashes specific to 64-bit build.
* Fix random crashes when playing audio tracks with names longer than 15 symbols.
* Fix crashes when trying to play .wav audio tracks on some Windows 11 systems.
* Fix last selected gun type not preserved after level jump.
* Fix incorrect vertical position after reloading a savegame made while standing on a bridge.
* Fix sprint value going below zero.
* Fix fog bulb density formula.
* Fix clockwork beetle activation crashing the game.
* Fix corrupted vehicle positions after savegame reload.
* Fix default ambience overlapping current one when loading a savegame.
* Fix doppelganger being limited to a single room.