@@ -2,6 +2,8 @@ Version 1.1.1
 ==============
 
 * Fix burning torch not working properly if there are more than 256 objects in a level.
+* Fix projectiles flying through animating objects.
+* Fix harpoon gun doing enormous damage on enemies.
 * Fix train death animation.
 * Fix knife thrower AI.
 * Overhaul look mode:
